; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_read_double.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_read_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson_reader = type { i32*, i32 }
%union.anon = type { double }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32*, %struct.bson_reader*)* @read_double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @read_double(i32* %0, %struct.bson_reader* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.bson_reader*, align 8
  %5 = alloca %union.anon, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.bson_reader* %1, %struct.bson_reader** %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %11 = call i32 @check_reader(i32* %9, %struct.bson_reader* %10, i32 8)
  %12 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %13 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* %19, align 4
  %21 = shl i32 %20, 8
  %22 = or i32 %17, %21
  %23 = load i32*, i32** %6, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 2
  %25 = load i32, i32* %24, align 4
  %26 = shl i32 %25, 16
  %27 = or i32 %22, %26
  %28 = load i32*, i32** %6, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 3
  %30 = load i32, i32* %29, align 4
  %31 = shl i32 %30, 24
  %32 = or i32 %27, %31
  store i32 %32, i32* %7, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 4
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** %6, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 5
  %38 = load i32, i32* %37, align 4
  %39 = shl i32 %38, 8
  %40 = or i32 %35, %39
  %41 = load i32*, i32** %6, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 6
  %43 = load i32, i32* %42, align 4
  %44 = shl i32 %43, 16
  %45 = or i32 %40, %44
  %46 = load i32*, i32** %6, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 7
  %48 = load i32, i32* %47, align 4
  %49 = shl i32 %48, 24
  %50 = or i32 %45, %49
  store i32 %50, i32* %8, align 4
  %51 = load i32, i32* %7, align 4
  %52 = load i32, i32* %8, align 4
  %53 = shl i32 %52, 32
  %54 = or i32 %51, %53
  %55 = bitcast %union.anon* %5 to i32*
  store i32 %54, i32* %55, align 8
  %56 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %57 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = getelementptr inbounds i32, i32* %58, i64 8
  store i32* %59, i32** %57, align 8
  %60 = load %struct.bson_reader*, %struct.bson_reader** %4, align 8
  %61 = getelementptr inbounds %struct.bson_reader, %struct.bson_reader* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 8
  %63 = sub nsw i32 %62, 8
  store i32 %63, i32* %61, align 8
  %64 = bitcast %union.anon* %5 to double*
  %65 = load double, double* %64, align 8
  ret double %65
}

declare dso_local i32 @check_reader(i32*, %struct.bson_reader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
